--- a/JenkinsFile
+++ b/JenkinsFile
@@ -4,9 +4,20 @@ pipeline {
     stages {
         stage('Verify Branch') {
             steps {
-                echo "$GIT_BRANCH"
+                echo $GIT_BRANCH 
             }
         }
-        
+         stage('Docker Build') {
+            steps {
+                powershell label: '', script: 'docker images -a'
+				powershell label: '', script: '''
+				cd azure-vote
+				docker images -a
+				docker build -t jenkins-pipeline .
+				docker images -a
+				cd ..'''
+				
+            }
+        }
     }
 }
