--- a/JenkinsFile
+++ b/JenkinsFile
@@ -9,15 +9,15 @@ pipeline {
         }
          stage('Docker Build') {
             steps {
-                powershell label: '', script: 'docker images -a'
-				powershell label: '', script: '''
-				cd azure-vote
-				docker images -a
-				docker build -t jenkins-pipeline .
-				docker images -a
-				cd ..'''
+                pwsh(script: "docker images -a")
+		pwsh(script: """
+		     cd azure-vote
+		     docker images -a
+		     docker build -t jenkins-pipeline .
+		     docker images -a
+		     cd ..
+		     """)
 				
             }
         }
-    }
-}
+    
