--- a/JenkinsFile
+++ b/JenkinsFile
@@ -9,14 +9,12 @@ pipeline {
         }
         stage('Docker Build') {
             steps {
-                pwsh(script: "docker images -a")
-				pwsh(script: """
-				cd azure-vote
+                powershell label: '', script: 'docker images -a'
+		powershell label: '', script: '''cd azure-vote
 				docker images -a
 				docker build -t jenkins-pipeline .
 				docker images -a
-				cd ..
-				""")
+				cd ..'''
 				
             }
         }
