--- a/JenkinsFile
+++ b/JenkinsFile
@@ -9,13 +9,12 @@ pipeline {
         }
         stage('Docker Build') {
             steps {
-                powershell label: '', script: 'docker images -a'
-		powershell label: '', script: '''cd azure-vote
+                 sh label: '', script: 'docker images -a'
+		 sh label: '', script: '''cd azure-vote
 				docker images -a
 				docker build -t jenkins-pipeline .
 				docker images -a
-				cd ..'''
-				
+				cd ..'''		
             }
         }
     }
