--- a/JenkinsFile
+++ b/JenkinsFile
@@ -7,7 +7,14 @@ pipeline {
                 echo "$GIT_BRANCH"
             }
         }
-        stage('Docker Build') {
+	stage('Initialize') {
+            steps {
+	       def dockerHome = tool 'myDocker'
+               env.PATH = "${dockerHome}/bin:${env.PATH}"
+   	      } 
+	 }
+	
+	stage('Docker Build') {
             steps {
                sh label: '', script: 'docker images -a'
 		  }
