--- a/JenkinsFile
+++ b/JenkinsFile
@@ -11,6 +11,11 @@ pipeline {
 	stage('Docker Build') {
             steps {
                sh label: '', script: 'docker images -a'
+	       sh label: '', script: '''cd azure-vote
+				docker images -a
+				docker build -t jenkins-pipeline .
+				docker images -a
+				cd ..'''
 		  }
         }
         
