--- a/JenkinsFile
+++ b/JenkinsFile
@@ -5,6 +5,11 @@ pipeline {
         stage('Verify Branch') {
             steps {
                 echo "$GIT_BRANCH"
+	    post { 
+               success { 
+                 echo 'Branch name printed successfully'
+                      }
+                 }
             }
         }
 	
@@ -18,6 +23,10 @@ pipeline {
 				cd ..'''
 		  }
         }
-        
+    }
+    post { 
+        always { 
+            echo 'I will always say Hello again! :):)'
+        }
     }
 }
